# circpong

./: .gitignore  CMakeLists.txt  config.ini  config.ini.default  main.cpp
etc/: 60-powermate.rules  watchdog.py
etc/keyboard/: config_log.txt
etc/udev_rules/: 60-powermate.rules
etc/watchdog/: supervisor_watchdog.conf  watchdog_client.sh  watchdog_server.py
src/: ball.cpp  ball.h  config.cpp  config.h  constants.h  control.cpp  control.h  control_non.cpp  environment.cpp  environment.h  game.cpp  game.h  input.h  main.cpp  opengl.h  opengl.mac.h  opengl.ubuntu.h  opengl.windows.h  paddle.h  player.cpp  player.h  scene.cpp  scene.h  start_game.cpp  start_game.h  state.cpp  state.h  text_drawer.cpp  text_drawer.h
src/scenes/: arena.cpp  arena.h  game_start.cpp  game_start.h  scene.cpp  scene.h  text_drawer.cpp  text_drawer.h  utils.cpp  utils.h
